# ContinuityGuard

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  no-internal-docs.yml
docs/: concepts.md  getting-started.md
docs/integrations/: ci.md
python/: .gitignore  README.md  pyproject.toml
python/examples/: README.md
python/examples/01-basic-scan/: scan.py
python/examples/02-ci-gate/: gate.py
python/examples/03-agent-native-json/: agent_report.py
python/src/continuityguard/: __init__.py  cli.py  scan.py
python/src/continuityguard/ingest/: __init__.py  ffmpeg.py
python/src/continuityguard/report/: __init__.py  json_report.py  terminal.py  types.py
python/src/continuityguard/score/: __init__.py  consistency.py  physics.py
python/tests/: conftest.py  test_cli.py  test_consistency.py  test_ffmpeg.py  test_json_report.py  test_physics.py  test_terminal.py
scripts/: copy-assets.mjs  verify-zero-network.mjs
src/: cli.test.ts  cli.ts
src/ingest/: ffmpeg.test.ts  ffmpeg.ts
src/report/: json.test.ts  json.ts  terminal.test.ts  terminal.ts  types.ts
src/score/: consistency.test.ts  consistency.ts  physics.test.ts  physics.ts
src/score/models/: NOTICE.md
src/score/testdata/: generate-fixtures.sh
