[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "continuityguard-cli"
version = "0.1.0"
description = "Local, zero-network CLI and library that scores AI-generated short-drama video clips for character-consistency drift and physics-plausibility issues before you re-render."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = ["cli", "video-qa", "character-consistency", "ai-video", "short-drama", "ffmpeg", "onnxruntime", "local-first", "offline"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "onnxruntime>=1.20,<2",
  "numpy>=1.24,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "build>=1.0,<2",
  "twine>=5.0,<7",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/ContinuityGuard"
Repository = "https://github.com/RudrenduPaul/ContinuityGuard"
"Bug Tracker" = "https://github.com/RudrenduPaul/ContinuityGuard/issues"
Changelog = "https://github.com/RudrenduPaul/ContinuityGuard/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RudrenduPaul/ContinuityGuard/blob/main/docs/getting-started.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
continuityguard = "continuityguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/continuityguard"]

[tool.hatch.build.targets.sdist]
include = [
  "src/continuityguard",
  "tests",
  "README.md",
  "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
